--- a/docs/notebooks/Autre/Memos/memo_Tri.ipynb
+++ b/docs/notebooks/Autre/Memos/memo_Tri.ipynb
@@ -424,7 +424,7 @@
    "metadata": {},
    "source": [
     "### Fonctionnement :\n",
-    "##### X\n",
+    "##### On divise la liste en deux parties gauche et droite à partir du milieu puis puis on divise ces parties en deux jusqu'à obtenir des liste de longueur 1. Ensuite on compare toutes ces listes et ont les rassemble de façon trié dans les deux parties gauche et droite. Enfin on vient comparer élément par élément les liste gauche et droite triées pour former la liste initiale triée.\n",
     "\n",
     "### Ce shéma explique la méthode utilisée par le tri par fusion :\n",
     "![](https://upload.wikimedia.org/wikipedia/commons/6/60/Mergesort_algorithm_diagram.png)"
@@ -432,34 +432,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fusion(L1,L2):\n",
-    "    n1 = len(L1)\n",
-    "    n2 = len(L2)\n",
-    "    L12 = [0]*(n1+n2)\n",
-    "    i1 = 0\n",
-    "    i2 = 0\n",
+    "def fusion(tab, gauche, droite):\n",
     "    i = 0\n",
-    "    while i1<n1 and i2<n2:\n",
-    "        if L1[i1] < L2[i2]:\n",
-    "            L12[i] = L1[i1]\n",
-    "            i1 += 1\n",
+    "    j = 0\n",
+    "    k = 0\n",
+    "    while i < len(gauche) and j < len(droite):\n",
+    "        if gauche[i] < droite[j]:\n",
+    "            tab[k] = gauche[i]\n",
+    "            i += 1\n",
     "        else:\n",
-    "            L12[i] = L2[i2]\n",
-    "            i2 += 1\n",
+    "            tab[k] = droite[j]\n",
+    "            j += 1\n",
+    "        k += 1\n",
+    "    while i < len(gauche):\n",
+    "        tab[k] = gauche[i]\n",
     "        i += 1\n",
-    "    while i1<n1:\n",
-    "    \tL12[i] = L1[i1]\n",
-    "    \ti1 += 1\n",
-    "    \ti += 1\n",
-    "    while i2<n2:\n",
-    "    \tL12[i] = L2[i2]\n",
-    "    \ti2 += 1\n",
-    "    \ti += 1 \n",
-    "    return L12"
+    "        k += 1\n",
+    "    while j < len(droite):\n",
+    "        tab[k] = droite[j]\n",
+    "        j += 1\n",
+    "        k += 1\n",
+    "    return tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tri_fusion(tab):\n",
+    "    if len(tab) > 1:\n",
+    "        milieu = len(tab)//2\n",
+    "        gauche = tab[0:milieu]\n",
+    "        droite = tab[milieu:]\n",
+    "\n",
+    "        tri_fusion(gauche)\n",
+    "        tri_fusion(droite)\n",
+    "        \n",
+    "        fusion(tab, gauche, droite)\n",
+    "        #print(tab, gauche, droite)\n",
+    "\n",
+    "    return tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10, 11, 12, 27]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab = [27, 10, 12, 8, 11]\n",
+    "tri_fusion(tab)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La complexité du tri par fusion :\n",
+    "\n",
+    "#### Cette fois ci, la complexité sera basé sur le nombre d'étapes :\n",
+    "#### Pour un tableau de taille 64 il faut 64/2 ; 32/2 ; 16/2 ; 8/2 ; 4/2 ; 2/2 = 1\n",
+    "#### Ainsi"
    ]
   }
  ],
