--- a/docs/notebooks/Autre/Memos/memo_Tri.ipynb
+++ b/docs/notebooks/Autre/Memos/memo_Tri.ipynb
@@ -13,25 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sujets :\n",
-    "e1 s42 e2 s43 e1 s45\n",
-    "tri en plus :\n",
-    "fusion et bulle"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://pixees.fr/informatiquelycee/n_site/nsi_prem_tri_algo.html"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Les algorithmes de tri des éléments d'un tableau ont une place à part en algorithmique, les deux algorithmes de tri les plus classiques sont :  \n",
     "#### - le tri par insertion,\n",
     "#### - le tri par sélection."
@@ -432,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,11 +487,217 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La complexité du tri par fusion :\n",
-    "\n",
+    "## La complexité du tri fusion :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1- Avec TimeIT :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.05 µs ± 45.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tab = [27, 10, 12, 8, 11]\n",
+    "%timeit tri_fusion(tab)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2- De façon mathématique :\n",
     "#### Cette fois ci, la complexité sera basé sur le nombre d'étapes :\n",
     "#### Pour un tableau de taille 64 il faut 64/2 ; 32/2 ; 16/2 ; 8/2 ; 4/2 ; 2/2 = 1\n",
-    "#### Ainsi"
+    "#### Ainsi il nous faudra 6 étapes\n",
+    "#### On peut donc en déduire :\n",
+    "#### Pour un tableau de taille n, il nous faudra 2^n étapes\n",
+    "#### Ou log2(n)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2- Le tri bulle :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://upload.wikimedia.org/wikipedia/commons/0/06/Bubble-sort.gif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tri_bulle(tab):\n",
+    "    n = len(tab)\n",
+    "    for i in range(n):\n",
+    "        for j in range(0, n-i-1):\n",
+    "            if tab[j] > tab[j+1] :\n",
+    "                tab[j], tab[j+1] = tab[j+1], tab[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10, 11, 12, 27]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tab = [27, 10, 12, 8, 11]\n",
+    "tri_bulle(tab)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La complexité du tri bulle :\n",
+    "### Avec TimeIT :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tab = [27, 10, 12, 8, 11]\n",
+    "%timeit tri_bulle(tab)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 42-ex1\n",
+    "\n",
+    "```python\n",
+    "def tri_selection(tab:list)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Tri une liste par ordre croissant sans créer de nouvelle liste\n",
+    "    • Précondition :\n",
+    "    - tab : une liste de type list\n",
+    "    • Postcondition :\n",
+    "    - La même liste triée par ordre croissant\n",
+    "    • Exemple :\n",
+    "    - tri_selection([1, 52, 6, -9, 12])\n",
+    "    > [-9, 1, 6, 12, 52]\n",
+    "    '''\n",
+    "\n",
+    "    assert tab == list(tab), \"tab doit être une list Python\"\n",
+    "\n",
+    "    for i in range (len(tab)):\n",
+    "        mini = tab[i]\n",
+    "        indice_mini = i\n",
+    "        for j in range(i, len(tab)):\n",
+    "            if tab[j]<mini:\n",
+    "                mini = tab[j]\n",
+    "                indice_mini = j\n",
+    "        element = tab[i]\n",
+    "        tab[i] = mini\n",
+    "        tab[indice_mini] = element\n",
+    "    return tab\n",
+    "```\n",
+    "\n",
+    "## 43-ex2\n",
+    "\n",
+    "```python\n",
+    "def tri_bulles(T):\n",
+    "    '''\n",
+    "\tRenvoie le tableau T trié par ordre croissant\n",
+    "\t'''\n",
+    "    n = len(T)\n",
+    "    for i in range(n-1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if T[j] > T[j+1]:\n",
+    "                temp = T[j]\n",
+    "                T[j] = T[j+1]\n",
+    "                T[j+1] = temp\n",
+    "    return T\n",
+    "```\n",
+    "\n",
+    "## 45-ex1\n",
+    "\n",
+    "```python\n",
+    "def rangement_valeurs(notes_eval:list)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en paramètre une liste \"notes_eval\" d'éléments int et renvoie une liste de longueur 11 telle que la valeur de cette liste à chaque rang est égale au nombre de notes valant ce rang\n",
+    "    • Précondition :\n",
+    "    - notes_eval : une liste d'entier de type list\n",
+    "    • Postcondition :\n",
+    "    - Une liste de longueur 11 telle que la valeur de cette liste à chaque rang est égale au nombre de notes valant ce rang\n",
+    "    • Exemple :\n",
+    "    - rangement_valeurs([2, 0, 5, 9, 6, 9, 10, 5, 7, 9, 9, 5, 0, 9, 6, 5, 4])\n",
+    "    > [2, 0, 1, 0, 1, 4, 2, 1, 0, 5, 1]\n",
+    "    '''\n",
+    "    \n",
+    "    assert notes_eval == list(notes_eval), \"notes_eval doit être une list Python\"\n",
+    "\n",
+    "    note = [0]*11\n",
+    "    for i in notes_eval:\n",
+    "        note[i] += 1\n",
+    "    return note\n",
+    "\n",
+    "\n",
+    "def notes_triees(effectifs_notes:list)->list:\n",
+    "    '''\n",
+    "    • Définition :\n",
+    "    - Prend en paramètre la liste des effectifs des notes et renvoie une liste contenant la liste, triée dans l’ordre croissant, des notes des élèves\n",
+    "    • Précondition :\n",
+    "    - effectifs_notes : la liste des effectifs des notes\n",
+    "    • Postcondition :\n",
+    "    - Une liste contenant la liste triée dans l’ordre croissant, des notes des élèves\n",
+    "    • Exemple :\n",
+    "    -  notes_triees([2, 0, 1, 0, 1, 4, 2, 1, 0, 5, 1])\n",
+    "    > [0, 0, 2, 4, 5, 5, 5, 5, 6, 6, 7, 9, 9, 9, 9, 9, 10]\n",
+    "    '''\n",
+    "    \n",
+    "    assert effectifs_notes == list(effectifs_notes), \"effectifs_notes doit être une list Python\"\n",
+    "\n",
+    "    note = []\n",
+    "    for i in range(len(effectifs_notes)):\n",
+    "        if effectifs_notes[i] != 0:\n",
+    "            for j in range(effectifs_notes[i]):\n",
+    "                note.append(i)\n",
+    "    return note\n",
+    "```"
    ]
   }
  ],
