--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -1224,11 +1224,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2\n"
+    "def moyenne(nom, dico_result):\n",
+    "    if nom in resultats:\n",
+    "        notes = dico_result[nom]\n",
+    "        total_points = 0\n",
+    "        total_coefficients = 0\n",
+    "        for valeurs in notes.values():\n",
+    "            note, coefficient = valeurs\n",
+    "            total_points = total_points + note * coefficient\n",
+    "            total_coefficients = total_coefficients + coefficient\n",
+    "        return round( total_points / total_coefficients, 1 )\n",
+    "    else:\n",
+    "        return -1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°17 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def moyenne(liste_notes):\n",
+    "    total_point = 0\n",
+    "    total_coef = 0\n",
+    "    for note in liste_notes:\n",
+    "        total_point += note[0]*note[1]\n",
+    "        total_coef += note[1]\n",
+    "        print(total_point)\n",
+    "    return total_point/total_coef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def pascal(n):\n",
+    "    triangle= [[1]]\n",
+    "    for k in range(1, n+1):\n",
+    "        ligne_k = [1]\n",
+    "        for i in range(1, k):\n",
+    "            ligne_k.append(triangle[k-1][i-1]+triangle[k-1][i])\n",
+    "        ligne_k.append(1)\n",
+    "        triangle.append(ligne_k)\n",
+    "    return triangle\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°18 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def max_et_indice(tab):\n",
+    "    maxi = tab[0]\n",
+    "    indice_maxi = 0\n",
+    "    for i in range(len(tab)):\n",
+    "        if tab[i] > maxi:\n",
+    "            maxi = tab[i]\n",
+    "            indice_maxi = i\n",
+    "    return (maxi, indice_maxi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def est_un_ordre(tab):\n",
+    "    '''\n",
+    "    Renvoie True si tab est de longueur n et contient tous les entiers\n",
+    "    de 1 à n, False sinon\n",
+    "    '''\n",
+    "    for i in range(1,len(tab)+1):\n",
+    "        if i not in tab:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def nombre_points_rupture(ordre):\n",
+    "    '''\n",
+    "    Renvoie le nombre de point de rupture de ordre qui représente un ordre\n",
+    "    de gènes de chromosome\n",
+    "    '''\n",
+    "    assert est_un_ordre(ordre), \"ordre n'est pas un ordre de gènes\"\n",
+    "    n = len(ordre)\n",
+    "    nb = 0\n",
+    "    if ordre[0] != 1: # le premier n'est pas 1\n",
+    "        nb = nb + 1\n",
+    "    i = 0\n",
+    "    while i < len(ordre)-1:\n",
+    "        if ordre[i]-ordre[i+1] not in [-1, 1]: # l'écart n'est pas 1\n",
+    "            nb = nb + 1\n",
+    "        i = i + 1\n",
+    "    if ordre[-1] != n: # le dernier n'est pas n\n",
+    "        nb = nb + 1\n",
+    "    return nb\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°19 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def recherche(tab, n):\n",
+    "    m = len(tab)//2\n",
+    "    if m == 0:\n",
+    "        return m == n\n",
+    "    if tab[m] < n:\n",
+    "        recherche(tab[0:m], n)\n",
+    "    elif tab[m] > n:\n",
+    "        recherche(tab[m:len(tab)], n)\n",
+    "    else:\n",
+    "        return m == n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recherche([2, 3, 4, 5, 6], 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tab = [1, 2, 3, 4, 5, 6, 7]\n",
+    "print(tab[0:3])"
    ]
   },
   {
