--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -531,6 +531,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fusion(tab1:list, tab2:list)->list:\n",
+    "    fusion = []\n",
+    "    for i in tab1:\n",
+    "        fusion.append(i)\n",
+    "    for i in tab2:\n",
+    "        fusion.append(i)\n",
+    "    \n",
+    "    x = 0\n",
+    "    for i in range(len(fusion)):\n",
+    "        mini = fusion[x]\n",
+    "        indice_mini = x\n",
+    "        for j in range(x, len(fusion)):\n",
+    "            if fusion[j] < mini:\n",
+    "                mini = fusion[j]\n",
+    "                indice_mini = j\n",
+    "        fusion[i], fusion[indice_mini] = fusion[indice_mini], fusion[i]\n",
+    "        x += 1\n",
+    "\n",
+    "    return fusion"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -1358,48 +1385,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1\n",
     "def recherche(tab, n):\n",
-    "    m = len(tab)//2\n",
-    "    if m == 0:\n",
-    "        return m == n\n",
-    "    if tab[m] < n:\n",
-    "        recherche(tab[0:m], n)\n",
-    "    elif tab[m] > n:\n",
-    "        recherche(tab[m:len(tab)], n)\n",
-    "    else:\n",
-    "        return m == n"
+    "    milieu = len(tab)//2\n",
+    "    x = 0\n",
+    "    indice = -1\n",
+    "    while tab[milieu] != n and x <= len(tab)//2:\n",
+    "        if tab[milieu] == n:\n",
+    "            indice == milieu\n",
+    "        elif tab[milieu] > n:\n",
+    "            milieu //= 2\n",
+    "        else:\n",
+    "            milieu += milieu//2\n",
+    "        x += 1\n",
+    "    if tab[milieu] == n:\n",
+    "        indice = milieu\n",
+    "    return indice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recherche([2, 3, 4, 5, 6], 5)"
+    "#2\n",
+    "ALPHABET = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+    "\n",
+    "\n",
+    "def position_alphabet(lettre):\n",
+    "    return ord(lettre) - ord('A')\n",
+    "\n",
+    "\n",
+    "def cesar(message, decalage):\n",
+    "    resultat = ''\n",
+    "    for c in message:\n",
+    "        if 'A' <= c and c <= 'Z':\n",
+    "            indice = (position_alphabet(c)+decalage) % 26\n",
+    "            resultat = resultat + ALPHABET[indice]\n",
+    "        else:\n",
+    "            resultat = resultat + c\n",
+    "    return resultat"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet 20 :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tab = [1, 2, 3, 4, 5, 6, 7]\n",
-    "print(tab[0:3])"
+    "#1\n",
+    "def ajoute_dictionnaires(d1, d2):\n",
+    "    nouveau_dictionnaire = {}\n",
+    "    for cle, valeur in d1.items():\n",
+    "        nouveau_dictionnaire[cle] = valeur\n",
+    "    for cle, valeur in d2.items():\n",
+    "        if not cle in nouveau_dictionnaire:\n",
+    "            nouveau_dictionnaire[cle] = valeur\n",
+    "        else:\n",
+    "            nouveau_dictionnaire[cle] += valeur\n",
+    "    return nouveau_dictionnaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "from random import randint\n",
+    "\n",
+    "def nbre_coups():\n",
+    "    n = 0\n",
+    "    cases_vues = [0]\n",
+    "    case_en_cours = 0\n",
+    "    nbre_cases = 12\n",
+    "    x = 0\n",
+    "    print(\"Cases vues :\", cases_vues,\", Dé :\", x, \"Case en cours :\", case_en_cours)\n",
+    "    while len(cases_vues) < nbre_cases:\n",
+    "        x = randint(1, 6)\n",
+    "        case_en_cours = (case_en_cours + x) % 12\n",
+    "        if not case_en_cours in cases_vues:\n",
+    "            cases_vues.append(case_en_cours)\n",
+    "        n = n + 1\n",
+    "        print(\"Cases vues :\", cases_vues,\", Dé :\", x, \"Case en cours :\", case_en_cours)\n",
+    "    return n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°21 :"
    ]
   },
   {
